[gd_scene load_steps=4 format=3 uid="uid://cboa82q0bjlvc"]

[ext_resource type="Script" uid="uid://bkjitwhuf67dg" path="res://sources/look_and_learn/tracing_manager.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bw8cb4e0a7ayj" path="res://assets/fonts/kalulu_mulish_regular.otf" id="2_mtk4m"]

[sub_resource type="LabelSettings" id="LabelSettings_e6xos"]
font = ExtResource("2_mtk4m")
font_size = 768
outline_size = 50
outline_color = Color(0, 0, 0, 1)

[node name="TracingManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")
label_settings = SubResource("LabelSettings_e6xos")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LowerLabels" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="UpperLabels" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
